all laouts is ready

--- a/html/reference.html
+++ b/html/reference.html
@@ -11,7 +11,9 @@
     <header>
       <h1>Header</h1>
     </header>
-    <h1>Main</h1>
+    <div class="container"> 
+      <h1 class="bg-danger text-white">Main</h1>
+    </div>
     <footer> 
       <h1>Hello footer</h1>
     </footer>
