--- a/html/reference.html
+++ b/html/reference.html
@@ -62,53 +62,26 @@
         </div>
       </div>
     </header>
-    <div class="container"> 
-      <h1 class="bg-danger text-white">Main</h1>
+    <div id="reference"> 
+            <section id="home_2">
+              <div class="main_container last_home_wrapper">
+                <ul class="breadcrumbs d-flex align-items-center gap-2">
+                  <li> <a href="/">Главная</a></li>
+                  <li><span>></span></li>
+                  <li><span>Справка</span></li>
+                </ul>
+                <div class="home_wrapper">
+                  <div class="home_left">
+                    <div class="title">Что делать после ДТП?</div>
+                    <div class="description">Здесь вы найдете ответы на наиболее часто задаваемые вопросы по всему, что связано с ДТП, автострахованием, возмещение убытков от ДТП, обжалование автоштрафов и прочие вопросы. Раздел дополняется.
+                    </div>
+                  </div>
+                  <div class="home_img"><img src="./images/reference_home_bg.png" alt=""></div>
+                </div>
+                <div class="bg_number">
+                   50-50-50</div>
+              </div>
+            </section>
     </div>
-    <footer class="footer"> 
-      <div class="main_container"> 
-        <div class="footer_top"> 
-          <div class="footer_top_left"> 
-            <div class="footer_left_in"> 
-              <ul class="footer_link">
-                <li class="footer_item"><a href="#">Главная</a></li>
-                <li class="footer_item"><a href="#">О службе</a></li>
-                <li class="footer_item"><a href="#">Услуги и цены</a></li>
-                <li class="footer_item"><a href="#">Тарифы</a></li>
-                <li class="footer_item"><a href="#">Примеры</a></li>
-              </ul>
-              <ul class="footer_link"> 
-                <li class="footer_item"> <a href="#">Справка</a></li>
-                <li class="footer_item"> <a href="#">Клиентам</a></li>
-                <li class="footer_item"> <a href="#">Журнал</a></li>
-                <li class="footer_item"> <a href="#">Контакты</a></li>
-              </ul>
-            </div>
-            <div class="footer_messenger"> <a href="#"> <img src="./images/vkontakt_icon.svg" alt=""></a><a href="#"> <img src="./images/telegram_icon.svg" alt=""></a></div>
-          </div>
-          <div class="footer_top_center"> 
-            <p>БАЗА ЗАПАД Калининград, ул. Менделеева, 61Б, корп. 2</p>
-            <p>БАЗА СЕВЕР 1 Калининград, ул. Горького, 170</p>
-            <p>БАЗА СЕВЕР 2 Калининград, ул. Потемкина, 1</p>
-            <p>БАЗА ВОСТОК Калининград, ул. Рихарда Зорге, 1</p>
-            <p>БАЗА ЦЕНТР Калининград, пер. Малый, 25</p>
-            <p>БАЗА ЮГ 1 Калининград, ул. Киевская, 50</p>
-            <p>БАЗА ЮГ 2 Калининград, ул. Типографская, 18</p>
-          </div>
-          <div class="footer_top_right"> 
-            <div class="download_app"> <a href="#"> <img src="./images/iphone_download.svg" alt=""></a><a href="#"> <img src="./images/android_download.svg" alt=""></a></div>
-            <p>Приложение «Помощник ОСАГО»:<span>для iOS, для Android</span></p>
-            <p>Приложение «ДТП Европротокол»:<span>для iOS, для Android</span></p>
-            <p>Приложение «Госуслуги Авто»:<span>для iOS, для Android</span></p>
-          </div>
-        </div>
-        <div class="footer_bottom"> 
-          <p>© 2009-2023 Индивидуальный            предприниматель Кириченко Сергей Викторович ИНН 390500303344, ОГРНИП 310392516600043. 236010. Продолжая использовать наш сайт, Вы даете согласие на обработку файлов Cookie в целях функционирования сайта, а так же сбора и анализа обезличенных статистических данных с использованием сервисов Google Analytics и Яндекс.Метрика. Все материалы данного сайта являются объектами авторского права (в том числе и дизайн). Запрещается копирование, распространение информации и изображений сайта. Сайт носит информационный характер и не является публичной офертой. По всем вопросам связанным разработкой и рекламой данного сайта в сети Интернет просьба обращаться в специализированную seo-компанию. Нормативные правовые акты, регламентирующие деятельность по обеспечению безопасности дорожного движения можно найти по сссылке.</p>
-        </div>
-      </div>
-    </footer>
-    <script src="./js/main.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/bootstrap-bundle.js"></script>
   </body>
 </html>
