--- a/html/magazine.html
+++ b/html/magazine.html
@@ -62,7 +62,28 @@
         </div>
       </div>
     </header>
-    <h1>Main</h1>
+    <div id="magazine_home"> 
+      <div class="main_container breadcrumb">
+        <ul class="d-flex gap-1"> 
+          <li> <a href="/">Главная</a></li>
+          <li> <span>></span></li>
+          <li> <span>Журнал</span></li>
+        </ul>
+      </div>
+      <div class="main_container"> 
+        <div class="magazine_home_in"> 
+          <h1>Будет ли много отдыхающих в          Калининградской области на Новый Год?</h1>
+          <p class="magazine_date">31.10.2023 </p>
+          <p>Наша команда в работе стремится к постоянному росту и развитию, что позволяет постепенно расширять спектр услуг по обслуживанию Ваших автомобилей. Все это предназначено для взаимовыгодного сотрудничества и удобства для каждого из наших клиентов.</p>
+        </div>
+      </div>
+    </div>
+    <div class="main_container"> 
+      <div class="magazine_text"> 
+        <p>Товарищи! сложившаяся структура организации требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Таким образом укрепление и развитие структуры требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач.</p>
+        <p>Равным образом консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Таким образом реализация намеченных плановых заданий требуют от нас анализа направлений прогрессивного развития.</p>
+      </div>
+    </div>
     <footer class="footer"> 
       <div class="main_container"> 
         <div class="footer_top"> 
