--- a/html/magazine.html
+++ b/html/magazine.html
@@ -82,6 +82,23 @@
       <div class="magazine_text"> 
         <p>Товарищи! сложившаяся структура организации требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Таким образом укрепление и развитие структуры требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач.</p>
         <p>Равным образом консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Таким образом реализация намеченных плановых заданий требуют от нас анализа направлений прогрессивного развития.</p>
+        <h2>Стиль и размер h2-заголовка</h2>
+        <p>
+           Идейные соображения <span>высшего порядка,</span>а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.</p><img class="w-100" src="./images/magazine_img.png" alt="">
+        <p class="img_bottom_img">Так должна подписываться фотография на бздячей подложке</p>
+        <h3>Стиль и размер h3-заголовка</h3>
+        <p class="magazine_bottom_text">Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.</p><span class="magazine_list_title">Стиль маркированного списка:</span>
+        <ul> 
+          <li>—  Значимость этих проблем настолько очевидна</li>
+          <li>—  Разнообразный и богатый опыт</li>
+          <li>—  Ссоответствует насущным потребностям</li>
+        </ul><span class="magazine_list_title">Стиль нумерованного списка:</span>
+        <ol> 
+          <li>1. Значимость этих проблем настолько очевидна</li>
+          <li>2. Разнообразный и богатый опыт</li>
+          <li>3. Ссоответствует насущным потребностям</li>
+        </ol>
+        <p>Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</p>
       </div>
     </div>
     <footer class="footer"> 
